--- a/frontend/periospot-vite/src/index.css
+++ b/frontend/periospot-vite/src/index.css
@@ -7,7 +7,7 @@
 /* Bariol Font Family */
 @font-face {
   font-family: 'Bariol';
-  src: url('/fonts/Bariol_Thin.otf') format('opentype');
+  src: url('/fonts/Bariol-Thin.woff2') format('woff2');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -15,15 +15,7 @@
 
 @font-face {
   font-family: 'Bariol';
-  src: url('/fonts/Bariol_Thin_Italic.otf') format('opentype');
-  font-weight: 100;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Bariol';
-  src: url('/fonts/Bariol_Light.otf') format('opentype');
+  src: url('/fonts/Bariol-Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -31,15 +23,7 @@
 
 @font-face {
   font-family: 'Bariol';
-  src: url('/fonts/Bariol_Light_Italic.otf') format('opentype');
-  font-weight: 300;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Bariol';
-  src: url('/fonts/Bariol_Regular.otf') format('opentype');
+  src: url('/fonts/Bariol-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -47,17 +31,9 @@
 
 @font-face {
   font-family: 'Bariol';
-  src: url('/fonts/Bariol_Bold.otf') format('opentype');
+  src: url('/fonts/Bariol-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Bariol';
-  src: url('/fonts/Bariol_Bold_Italic.otf') format('opentype');
-  font-weight: 700;
-  font-style: italic;
   font-display: swap;
 }
 
